--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,11 @@
     <% for (var i in htmlWebpackPlugin.options.cdn && htmlWebpackPlugin.options.cdn.js) { %>
       <script type="text/javascript" src="<%= htmlWebpackPlugin.options.cdn.js[i] %>"></script>
     <% } %>
+
+    <% if (process.env.NODE_ENV==='development' ) { %>
+    <script src="//cdn.bootcdn.net/ajax/libs/eruda/2.4.1/eruda.js"></script>
+    <script>eruda.init();</script>
+    <% } %>
     <!-- built files will be auto injected -->
   </body>
 </html>
